# mc-glfont

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
glfont_native/: CMakeLists.txt
glfont_native/src/: glfont_native.cpp
glfont_native/src/util/: bitmap.hpp  glyph_info.hpp
src/main/java/io/karma/glfont/: GLFont.java
src/main/java/io/karma/glfont/injection/: MixinLoader.java
src/main/java/io/karma/glfont/injection/mixins/client/: MixinMinecraft.java
src/main/java/io/karma/glfont/render/: FontMeshBuilder.java  TrueTypeFontRenderer.java
src/main/java/io/karma/glfont/render/gl/: GlBuffer.java  GlException.java  GlObject.java  GlShader.java  GlTexture.java
src/main/java/io/karma/glfont/util/: Font.java  GlyphInfo.java
src/main/resources/: mcmod.info  mixins.glfont.json
